Professionalize standard RFI exports
